--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,20 @@
 {% block content %}
 <!-- ======= Hero Section ======= -->
 <section id="hero" class="hero d-flex align-items-center">
-
+    {% if request.user.is_authenticated %}
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 d-flex flex-column justify-content-center">
+                <h1 data-aos="fade-up">We offer modern solutions for modern problem</h1>
+                <h2 data-aos="fade-up" data-aos-delay="400">Welcome to Land Registration</h2>
+                
+            </div>
+            <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
+                <img src="{% static 'assets/img/features-2.png' %}" class="img-fluid" alt="">
+            </div>
+        </div>
+    </div>
+    {% else %}
     <div class="container">
         <div class="row">
             <div class="col-lg-6 d-flex flex-column justify-content-center">
@@ -13,19 +26,22 @@
                 <h2 data-aos="fade-up" data-aos-delay="400">Welcome to Land Registration</h2>
                 <div data-aos="fade-up" data-aos-delay="600">
                     <div class="text-center text-lg-start">
+                        
                         <a href="#about"
                             class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                             <span>Get Started</span>
                             <i class="bi bi-arrow-right"></i>
                         </a>
+                        
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-                <img src="{% static 'assets/img/hero-img.png' %}" class="img-fluid" alt="">
+                <img src="{% static 'assets/img/features.png' %}" class="img-fluid" alt="">
             </div>
         </div>
     </div>
+    {% endif %}
 
 </section>
 <!-- End Hero -->
