--- a/templates/my-property.html
+++ b/templates/my-property.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 <!--  -->
 {% block content %}
-<br/>
-<br/>
+<br />
+<br />
 <main id="main">
   <!-- ======= About Section ======= -->
   <section id="about" class="about">
-    <div class="container" >
+    <div class="container">
       <div class="row gx-0">
         <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
           <div class="c">
-           <h2>My Properties </h2>
+            <h2>My Properties </h2>
           </div>
         </div>
       </div>
@@ -18,12 +18,44 @@
     <br>
     <br>
     <div class="container">
-    <div class="list-group">
-        {% for property in properties %}
-        <a href="#" class="list-group-item list-group-item-action"> <b>{{property.address}} -- {{property.owner_name}} -- {{property.get_property_type_display}}</b></a>
-        {% endfor %}
-      </div>
+
     </div>
+    <div class="container">
+      <table class="table">
+        <thead class="table-dark">
+          <tr>
+            <th>SN</th>
+            <th>Owner Name</th>
+            <th>State</th>
+            <th>District</th>
+            <th>Village</th>
+            <th>Status</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for property in properties %}
+          <tr>
+            <td>{{ forloop.counter }}</td>
+            <td>{{property.owner_name}}</td>
+            <td>{{ property.state }}</td>
+            <td>{{ property.district}}</td>
+            <td>{{ property.village}}</td>
+            {% if property.status == 'A'%}
+            <td><span class="badge bg-success">Accepted</span></td>
+            {% elif property.status == "P" %}
+            <td><span class="badge bg-primary">Pending</span></td>
+            {% else %}
+            <td><span class="badge bg-danger">Declined</span></td>
+            {% endif %}
+            <td><a type="button" class="btn btn-info btn-sm" href="{% url 'property-detail' id=property.id %}">View</a>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+
   </section>
-  </main>
+</main>
 {% endblock content %}
