--- a/templates/property-register.html
+++ b/templates/property-register.html
@@ -1,22 +1,85 @@
 {% extends 'base.html' %}
+{% load static %}
+
+<!-- Css Block -->
+{% block style %}
+<link rel="stylesheet" href="{% static 'assets/css/register-property.css' %}">
+{% endblock %}
+
 <!--  -->
 {% block content %}
 <main id="main">
   <!-- ======= About Section ======= -->
-  <section id="about" class="about">
+
+  <section id="hero" class="hero d-flex align-items-center">
     <div class="container" data-aos="fade-up">
-      <div class="row gx-0">
-        <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
-          <div class="content">
-            <form method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+      <div class="row">
+        <div class="container-fluid px-1 py-5 mx-auto">
+          <div class="row d-flex justify-content-center">
+            <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
+              <div class="card">
+                <h3 class="text-center mb-4">Land Registration Form</h5>
+                  <form class="form-card" method="post">
+                    {% csrf_token %}
+                    <div class="row justify-content-between text-left">
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Owner
+                          Name<span class="text-danger"> *</span></label> <input type="text" id="owner_name"
+                          name="owner_name" placeholder="Enter your first name" onblur="validate(1)"> </div>
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label
+                          class="form-control-label px-3">State<span class="text-danger"> *</span></label> <input
+                          type="text" id="state" name="state" placeholder="State" onblur="validate(2)">
+                      </div>
+                    </div>
+                    <div class="row justify-content-between text-left">
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label
+                          class="form-control-label px-3">District<span class="text-danger"> *</span></label> <input
+                          type="text" id="district" name="district" placeholder="District" onblur="validate(3)"> </div>
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label
+                          class="form-control-label px-3">Village/Municipality<span class="text-danger">
+                            *</span></label> <input type="text" id="village" name="village"
+                          placeholder="Village or Municipality" onblur="validate(4)">
+                      </div>
+                    </div>
+                    <div class="row justify-content-between text-left">
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label
+                          class="form-control-label px-3">Address<span class="text-danger"> *</span></label> <input
+                          type="text" id="address" name="address" placeholder="Full Address" onblur="validate(5)">
+                      </div>
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label
+                          class="form-control-label px-3">Contact No<span class="text-danger">
+                            *</span></label> <input type="text" id="contact_no" name="contact_no"
+                          placeholder="Contact Number" onblur="validate(6)">
+                      </div>
+                    </div>
+                    <div class="row justify-content-between text-left">
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label
+                          class="form-control-label px-3">Longitude<span class="text-danger"> *</span></label> <input
+                          type="number" step="any" id="longitude" name="longitude" placeholder="75.50"
+                          onblur="validate(5)">
+                      </div>
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label
+                          class="form-control-label px-3">latitude<span class="text-danger">
+                            *</span></label> <input type="number" step="any" id="latitdude" name="latitdude"
+                          placeholder="43.51" onblur="validate(6)">
+                      </div>
+                    </div>
+                    <div class="row justify-content-between text-left">
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label
+                          class="form-control-label px-3">Area<span class="text-danger"> *</span></label> <input
+                          type="number" step="0.01" id="area" name="area" placeholder="square ft." onblur="validate(5)">
+                      </div>
+                    </div>
+                    <div class="row justify-content-end">
+                      <div class="form-group col-sm-6"> <button type="submit" class="btn-block btn-primary">Request
+                          Register</button> </div>
+                    </div>
+                  </form>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-  </main>
+</main>
 {% endblock content %}
